特性合并
Co-authored-by: zhangjun_makeit<zhangjun220@huawei.com>
Co-authored-by: tianmingyong<tianmingyong@huawei.com>
Co-authored-by: gitcode-bot<noreply@gitcode.com>
Co-authored-by: lideliang_makeit<lideliang5@huawei.com>



# message auto-generated for no-merge-commit merge:
!211 特性合并

From: @tianmingyong 
Reviewed-by: @tianmingyong, @foreach1991